testsuite/tests/grammar/invalid_token_rule/unknown-token.lkt
import common

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example(@no_such_token)
}
